--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <div class="col-6">
         <form class="d-flex align-items-center">
-            <input class="form-control" type="text" name="title" placeholder="Название">
-            <input class="form-control" type="text" name="height" placeholder="Длина">
-            <input class="form-control" type="text" name="width" placeholder="Ширина">
+            <input class="form-control" type="text" name="title" placeholder="Название дорожки">
+            <input class="form-control" type="text" name="height" placeholder="Длина (в метрах)">
+            <input class="form-control" type="text" name="width" placeholder="Ширина (в метрах)">
             <button type="submit" class="btnSave">Сохранить</button>
         </form>
 
